force-app/main/default/objects/Allocation__c/Allocation__c.object-meta.xml
<CustomObject>
    <label>Allocation</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Allocation Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>