force-app/main/default/objects/Allocation__c/fields/Allocation_Type__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Type__c</fullName>
    <label>Allocation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Push</fullName>
            </value>
            <value>
                <fullName>Pull</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>