force-app/main/default/objects/Allocation__c/fields/Mechanism__c.field-meta.xml
<CustomField>
    <fullName>Mechanism__c</fullName>
    <label>Mechanism</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capacity</fullName>
            </value>
            <value>
                <fullName>Round Robin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>