force-app/main/default/objects/Allocation__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Application_Stage_Global_Picklist</valueSetName>
    </valueSet>
</CustomField>