force-app/main/default/objects/Allocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Allocation_Type__c</columns>
    <columns>Mechanism__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>